# ldforge

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE.icons  README.md  bbox.cpp  bbox.h  buttonbox.h  cfgdef.h  changelog.txt  color.h  colors.cpp  colors.h  common.h  config.cpp  config.h  draw.cpp  draw.h  extprogs.cpp  extprogs.h  file.cpp  file.h  gldraw.cpp  gldraw.h  gui.cpp  gui.h  gui_actions.cpp  gui_editactions.cpp  history.cpp  history.h  io.cpp  io.h  ldforge.kdev4  ldforge.pro  ldforge.qrc  ldforge.rc  ldtypes.cpp  ldtypes.h  main.cpp  misc.cpp  (+32 more)
data/: primitive-categories.cfg
icons/: .directory  colorpalette  colors.txt
legacy/: checkboxgroup.cpp
src/: AddObjectDialog.cc  AddObjectDialog.h  ColorSelector.cc  ColorSelector.h  Colors.cc  Colors.h  Configuration.cc  Configuration.h  ConfigurationDialog.cc  ConfigurationDialog.h  CrashCatcher.cc  CrashCatcher.h  Dialogs.cc  Dialogs.h  Document.cc  Document.h  Documentation.cc  Documentation.h  EditHistory.cc  EditHistory.h  ExternalPrograms.cc  Format.h  GLCompiler.cc  GLCompiler.h  GLRenderer.cc  GLRenderer.h  GLShared.h  LDConfig.cc  LDConfig.h  LDObject.cc  LDObject.h  Macros.h  Main.cc  Main.h  MainWindow.cc  MainWindow.h  MessageLog.cc  MessageLog.h  Misc.cc  Misc.h  (+150 more)
src/actions/: EditActions.cc  MainActions.cc
src/misc/: DocumentPointer.cc  DocumentPointer.h  InvokationDeferer.cc  InvokationDeferer.h  RingFinder.cc  RingFinder.h  documentPointer.cc  documentPointer.h  invokationDeferer.cc  invokeLater.cc  ringFinder.cc  ringFinder.h
src/ui/: addhistoryline.ui  config.ui  coverer.ui  downloadfrom.ui  edger2.ui  editraw.ui  extprogpath.ui  intersector.ui  ldforge.ui  ldrawpath.ui  makeprim.ui  overlay.ui  replcoords.ui  ytruder.ui
ui/: about.ui  bombbox.ui  colorsel.ui  config.ui  downloadfrom.ui  edger2.ui  editraw.ui  flip.ui  isecalc.ui  ldforge.ui  ldrawpath.ui  newpart.ui  openprogress.ui  rectifier.ui  rotpoint.ui  ytruder.ui
updaterevision/: CMakeLists.txt  updaterevision.c
